--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <img src="C:\Users\rajal\Documents\mathu.img.jpg" alt="Profile Picture">
     <h1>MATHUVANTHI M</h1>
     <h3>Full Stack Web Developer</h3>
-    <p>Hello! I am MAthuvanthi, a passionate full stack developer specializing in building modern and responsive web applications. I enjoy solving problems and creating digital experiences.</p>
+    <p>Hello! I am Mathuvanthi, a passionate full stack developer specializing in building modern and responsive web applications. I enjoy solving problems and creating digital experiences.</p>
   </section>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -277,4 +277,5 @@
         });
     </script>
 </body>
+
 </html>
