--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <section id="profile">
-    <img src="C:\Users\rajal\Documents\mathu.img.jpg" alt="Profile Picture">
+    <img src="mathu.img.jpg"alt="Profile Picture">
     <h1>MATHUVANTHI M</h1>
     <h3>Full Stack Web Developer</h3>
     <p>Hello! I am Mathuvanthi, a passionate full stack developer specializing in building modern and responsive web applications. I enjoy solving problems and creating digital experiences.</p>
@@ -277,4 +277,5 @@
         });
     </script>
 </body>
+
 </html>
