--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="C:\Users\rajal\Documents\mathu.doc.docx"target="_blank" class="download-button">Download CV</a>
+            <a href="mathu.doc."target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
@@ -279,4 +279,5 @@
 </body>
 
 </html>
+
 
